squash: fix icon alignment

--- a/protocol-designer/src/containers/TitleBar.css
+++ b/protocol-designer/src/containers/TitleBar.css
@@ -1,5 +1,10 @@
 .icon {
-  display: inline-block;
+  vertical-align: middle;
   height: 1.25rem;
   margin-right: 2rem;
+}
+
+.icon_inline_text {
+  display: inline-block;
+  vertical-align: middle;
 }
